--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,28 +13,28 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-03 Fri 11:54]
+#+CAPTION: Clock summary at [2019-05-03 Fri 12:50]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *76:23* |       |       | 100.0 |
+| *Total time*                                           | *77:17* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 76:23   |       |       | 100.0 |
-| Active                                                 |         | 76:23 |       | 100.0 |
+| Stories                                                | 77:17   |       |       | 100.0 |
+| Active                                                 |         | 77:17 |       | 100.0 |
 | Edit release notes for previous sprint                 |         |       |  2:40 |   3.5 |
 | Sprint and product backlog grooming                    |         |       |  3:27 |   4.5 |
 | Create a video demo for the previous sprint's features |         |       |  1:55 |   2.5 |
 | Read variability papers                                |         |       |  1:04 |   1.4 |
 | Emacs maintenance and exploration work                 |         |       |  0:20 |   0.4 |
-| Fix issues with nightly build and CI                   |         |       |  0:39 |   0.9 |
-| Finish implementing the variability model              |         |       | 10:49 |  14.2 |
-| Trim down stitch's use of annotations                  |         |       |  1:30 |   2.0 |
-| Read meta-data using configurations                    |         |       | 24:24 |  31.9 |
-| Remove uses of annotations                             |         |       |  7:44 |  10.1 |
+| Fix issues with nightly build and CI                   |         |       |  0:39 |   0.8 |
+| Finish implementing the variability model              |         |       | 10:49 |  14.0 |
+| Trim down stitch's use of annotations                  |         |       |  1:30 |   1.9 |
+| Read meta-data using configurations                    |         |       | 24:24 |  31.6 |
+| Remove uses of annotations                             |         |       |  7:44 |  10.0 |
 | Stitch is still using artefact writer                  |         |       |  0:04 |   0.1 |
 | Exclude profiles from stereotypes processing           |         |       |  2:41 |   3.5 |
-| Profiles as meta-model elements                        |         |       | 13:54 |  18.2 |
-| Add support for composable stereotypes                 |         |       |  5:12 |   6.8 |
+| Profiles as meta-model elements                        |         |       | 13:54 |  18.0 |
+| Add support for composable stereotypes                 |         |       |  6:06 |   7.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -787,6 +787,8 @@ Mop-up tasks:
 
 *** STARTED Add support for composable stereotypes                    :story:
     :LOGBOOK:
+    CLOCK: [2019-05-03 Fri 12:32]--[2019-05-03 Fri 12:50] =>  0:18
+    CLOCK: [2019-05-03 Fri 11:55]--[2019-05-03 Fri 12:31] =>  0:36
     CLOCK: [2019-05-03 Fri 11:39]--[2019-05-03 Fri 11:54] =>  0:15
     CLOCK: [2019-05-03 Fri 11:34]--[2019-05-03 Fri 11:38] =>  0:04
     CLOCK: [2019-05-03 Fri 08:50]--[2019-05-03 Fri 11:28] =>  2:38
