--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,25 +12,25 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-11 Sat 07:07]
+#+CAPTION: Clock summary at [2019-05-11 Sat 07:41]
 | <75>                                                       |         |       |      |       |
 | Headline                                                   | Time    |       |      |     % |
 |------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                               | *36:23* |       |      | 100.0 |
+| *Total time*                                               | *36:56* |       |      | 100.0 |
 |------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                    | 36:23   |       |      | 100.0 |
-| Active                                                     |         | 36:23 |      | 100.0 |
-| Edit release notes for previous sprint                     |         |       | 2:41 |   7.4 |
-| Create a video demo for the previous sprint's features     |         |       | 2:11 |   6.0 |
+| Stories                                                    | 36:56   |       |      | 100.0 |
+| Active                                                     |         | 36:56 |      | 100.0 |
+| Edit release notes for previous sprint                     |         |       | 2:41 |   7.3 |
+| Create a video demo for the previous sprint's features     |         |       | 2:11 |   5.9 |
 | Sprint and product backlog grooming                        |         |       | 1:01 |   2.8 |
 | Defining profiles directly on a target model does not work |         |       | 0:30 |   1.4 |
 | Inner modules need to be qualified                         |         |       | 0:22 |   1.0 |
-| Create namespaces for model elements                       |         |       | 8:59 |  24.7 |
-| Leaves in internal modules are not captured correctly      |         |       | 1:33 |   4.3 |
-| Try to add relational tracing support                      |         |       | 2:51 |   7.8 |
-| Linux and OSX binaries are not stripped                    |         |       | 1:23 |   3.8 |
-| Initial analysis to code generate feature infrastructure   |         |       | 7:13 |  19.8 |
-| Replace JSON based feature templates with generated code   |         |       | 7:39 |  21.0 |
+| Create namespaces for model elements                       |         |       | 8:59 |  24.3 |
+| Leaves in internal modules are not captured correctly      |         |       | 1:33 |   4.2 |
+| Try to add relational tracing support                      |         |       | 2:51 |   7.7 |
+| Linux and OSX binaries are not stripped                    |         |       | 1:23 |   3.7 |
+| Initial analysis to code generate feature infrastructure   |         |       | 7:13 |  19.5 |
+| Replace JSON based feature templates with generated code   |         |       | 8:12 |  22.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -404,6 +404,7 @@ Notes:
 
 *** STARTED Replace JSON based feature templates with generated code  :story:
     :LOGBOOK:
+    CLOCK: [2019-05-11 Sat 07:08]--[2019-05-11 Sat 07:41] =>  0:33
     CLOCK: [2019-05-11 Sat 06:52]--[2019-05-11 Sat 07:07] =>  0:15
     CLOCK: [2019-05-11 Sat 06:42]--[2019-05-11 Sat 06:51] =>  0:09
     CLOCK: [2019-05-11 Sat 06:10]--[2019-05-11 Sat 06:41] =>  0:31
