--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,25 +12,25 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-12 Sun 13:42]
+#+CAPTION: Clock summary at [2019-05-12 Sun 15:29]
 | <75>                                                       |         |       |       |       |
 | Headline                                                   | Time    |       |       |     % |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                               | *41:16* |       |       | 100.0 |
+| *Total time*                                               | *42:01* |       |       | 100.0 |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                    | 41:16   |       |       | 100.0 |
-| Active                                                     |         | 41:16 |       | 100.0 |
-| Edit release notes for previous sprint                     |         |       |  2:41 |   6.5 |
-| Create a video demo for the previous sprint's features     |         |       |  2:11 |   5.3 |
-| Sprint and product backlog grooming                        |         |       |  1:01 |   2.5 |
+| Stories                                                    | 42:01   |       |       | 100.0 |
+| Active                                                     |         | 42:01 |       | 100.0 |
+| Edit release notes for previous sprint                     |         |       |  2:41 |   6.4 |
+| Create a video demo for the previous sprint's features     |         |       |  2:11 |   5.2 |
+| Sprint and product backlog grooming                        |         |       |  1:01 |   2.4 |
 | Defining profiles directly on a target model does not work |         |       |  0:30 |   1.2 |
 | Inner modules need to be qualified                         |         |       |  0:22 |   0.9 |
-| Create namespaces for model elements                       |         |       |  8:59 |  21.8 |
-| Leaves in internal modules are not captured correctly      |         |       |  1:33 |   3.8 |
-| Try to add relational tracing support                      |         |       |  2:51 |   6.9 |
-| Linux and OSX binaries are not stripped                    |         |       |  1:23 |   3.4 |
-| Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  17.5 |
-| Replace JSON based feature templates with generated code   |         |       | 12:32 |  30.4 |
+| Create namespaces for model elements                       |         |       |  8:59 |  21.4 |
+| Leaves in internal modules are not captured correctly      |         |       |  1:33 |   3.7 |
+| Try to add relational tracing support                      |         |       |  2:51 |   6.8 |
+| Linux and OSX binaries are not stripped                    |         |       |  1:23 |   3.3 |
+| Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  17.2 |
+| Replace JSON based feature templates with generated code   |         |       | 13:17 |  31.6 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -404,6 +404,10 @@ Notes:
 
 *** STARTED Replace JSON based feature templates with generated code  :story:
     :LOGBOOK:
+    CLOCK: [2019-05-12 Sun 15:24]--[2019-05-12 Sun 15:29] =>  0:05
+    CLOCK: [2019-05-12 Sun 15:00]--[2019-05-12 Sun 15:23] =>  0:23
+    CLOCK: [2019-05-12 Sun 14:52]--[2019-05-12 Sun 14:59] =>  0:07
+    CLOCK: [2019-05-12 Sun 14:41]--[2019-05-12 Sun 14:51] =>  0:10
     CLOCK: [2019-05-12 Sun 13:37]--[2019-05-12 Sun 13:42] =>  0:05
     CLOCK: [2019-05-12 Sun 13:21]--[2019-05-12 Sun 13:36] =>  0:15
     CLOCK: [2019-05-12 Sun 13:00]--[2019-05-12 Sun 13:20] =>  0:20
@@ -484,6 +488,8 @@ Notes:
 - why are there multiple decoration related fields? some are
   =masd.decoration= others are
   =masd.generation.decoration=. Investigate how they are used.
+- archetype location properties are not useful for instance templates.
+  We should not require them in this case.
 
 *** Make labels a plain text field not a collection                   :story:
 
