--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,14 +12,14 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-12 Sun 15:36]
+#+CAPTION: Clock summary at [2019-05-12 Sun 15:42]
 | <75>                                                       |         |       |       |       |
 | Headline                                                   | Time    |       |       |     % |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                               | *42:07* |       |       | 100.0 |
+| *Total time*                                               | *42:12* |       |       | 100.0 |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                    | 42:07   |       |       | 100.0 |
-| Active                                                     |         | 42:07 |       | 100.0 |
+| Stories                                                    | 42:12   |       |       | 100.0 |
+| Active                                                     |         | 42:12 |       | 100.0 |
 | Edit release notes for previous sprint                     |         |       |  2:41 |   6.4 |
 | Create a video demo for the previous sprint's features     |         |       |  2:11 |   5.2 |
 | Sprint and product backlog grooming                        |         |       |  1:01 |   2.4 |
@@ -30,7 +30,7 @@
 | Try to add relational tracing support                      |         |       |  2:51 |   6.8 |
 | Linux and OSX binaries are not stripped                    |         |       |  1:23 |   3.3 |
 | Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  17.1 |
-| Replace JSON based feature templates with generated code   |         |       | 13:23 |  31.8 |
+| Replace JSON based feature templates with generated code   |         |       | 13:28 |  31.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -404,6 +404,7 @@ Notes:
 
 *** STARTED Replace JSON based feature templates with generated code  :story:
     :LOGBOOK:
+    CLOCK: [2019-05-12 Sun 15:37]--[2019-05-12 Sun 15:42] =>  0:05
     CLOCK: [2019-05-12 Sun 15:30]--[2019-05-12 Sun 15:36] =>  0:06
     CLOCK: [2019-05-12 Sun 15:24]--[2019-05-12 Sun 15:29] =>  0:05
     CLOCK: [2019-05-12 Sun 15:00]--[2019-05-12 Sun 15:23] =>  0:23
