--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,25 +12,25 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-12 Sun 18:37]
+#+CAPTION: Clock summary at [2019-05-12 Sun 18:51]
 | <75>                                                       |         |       |       |       |
 | Headline                                                   | Time    |       |       |     % |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                               | *42:31* |       |       | 100.0 |
+| *Total time*                                               | *42:42* |       |       | 100.0 |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                    | 42:31   |       |       | 100.0 |
-| Active                                                     |         | 42:31 |       | 100.0 |
+| Stories                                                    | 42:42   |       |       | 100.0 |
+| Active                                                     |         | 42:42 |       | 100.0 |
 | Edit release notes for previous sprint                     |         |       |  2:41 |   6.3 |
 | Create a video demo for the previous sprint's features     |         |       |  2:11 |   5.1 |
 | Sprint and product backlog grooming                        |         |       |  1:01 |   2.4 |
 | Defining profiles directly on a target model does not work |         |       |  0:30 |   1.2 |
 | Inner modules need to be qualified                         |         |       |  0:22 |   0.9 |
-| Create namespaces for model elements                       |         |       |  8:59 |  21.1 |
+| Create namespaces for model elements                       |         |       |  8:59 |  21.0 |
 | Leaves in internal modules are not captured correctly      |         |       |  1:33 |   3.6 |
 | Try to add relational tracing support                      |         |       |  2:51 |   6.7 |
-| Linux and OSX binaries are not stripped                    |         |       |  1:23 |   3.3 |
-| Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  17.0 |
-| Replace JSON based feature templates with generated code   |         |       | 13:47 |  32.4 |
+| Linux and OSX binaries are not stripped                    |         |       |  1:23 |   3.2 |
+| Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  16.9 |
+| Replace JSON based feature templates with generated code   |         |       | 13:58 |  32.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -404,6 +404,7 @@ Notes:
 
 *** STARTED Replace JSON based feature templates with generated code  :story:
     :LOGBOOK:
+    CLOCK: [2019-05-12 Sun 18:38]--[2019-05-12 Sun 18:49] =>  0:11
     CLOCK: [2019-05-12 Sun 18:30]--[2019-05-12 Sun 18:37] =>  0:07
     CLOCK: [2019-05-12 Sun 15:43]--[2019-05-12 Sun 15:55] =>  0:12
     CLOCK: [2019-05-12 Sun 15:37]--[2019-05-12 Sun 15:42] =>  0:05
@@ -493,7 +494,8 @@ Notes:
   =masd.decoration= others are
   =masd.generation.decoration=. Investigate how they are used.
 - archetype location properties are not useful for instance templates.
-  We should not require them in this case.
+  We should not require them in this case. We could make the location
+  optional on the template.
 
 *** Make labels a plain text field not a collection                   :story:
 
