--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,14 +12,14 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-12 Sun 18:51]
+#+CAPTION: Clock summary at [2019-05-12 Sun 18:59]
 | <75>                                                       |         |       |       |       |
 | Headline                                                   | Time    |       |       |     % |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                               | *42:42* |       |       | 100.0 |
+| *Total time*                                               | *42:50* |       |       | 100.0 |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                    | 42:42   |       |       | 100.0 |
-| Active                                                     |         | 42:42 |       | 100.0 |
+| Stories                                                    | 42:50   |       |       | 100.0 |
+| Active                                                     |         | 42:50 |       | 100.0 |
 | Edit release notes for previous sprint                     |         |       |  2:41 |   6.3 |
 | Create a video demo for the previous sprint's features     |         |       |  2:11 |   5.1 |
 | Sprint and product backlog grooming                        |         |       |  1:01 |   2.4 |
@@ -29,8 +29,8 @@
 | Leaves in internal modules are not captured correctly      |         |       |  1:33 |   3.6 |
 | Try to add relational tracing support                      |         |       |  2:51 |   6.7 |
 | Linux and OSX binaries are not stripped                    |         |       |  1:23 |   3.2 |
-| Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  16.9 |
-| Replace JSON based feature templates with generated code   |         |       | 13:58 |  32.7 |
+| Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  16.8 |
+| Replace JSON based feature templates with generated code   |         |       | 14:06 |  32.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -404,6 +404,7 @@ Notes:
 
 *** STARTED Replace JSON based feature templates with generated code  :story:
     :LOGBOOK:
+    CLOCK: [2019-05-12 Sun 18:50]--[2019-05-12 Sun 18:58] =>  0:08
     CLOCK: [2019-05-12 Sun 18:38]--[2019-05-12 Sun 18:49] =>  0:11
     CLOCK: [2019-05-12 Sun 18:30]--[2019-05-12 Sun 18:37] =>  0:07
     CLOCK: [2019-05-12 Sun 15:43]--[2019-05-12 Sun 15:55] =>  0:12
