--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,25 +12,25 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-12 Sun 18:59]
+#+CAPTION: Clock summary at [2019-05-12 Sun 19:07]
 | <75>                                                       |         |       |       |       |
 | Headline                                                   | Time    |       |       |     % |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                               | *42:50* |       |       | 100.0 |
+| *Total time*                                               | *42:58* |       |       | 100.0 |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                    | 42:50   |       |       | 100.0 |
-| Active                                                     |         | 42:50 |       | 100.0 |
-| Edit release notes for previous sprint                     |         |       |  2:41 |   6.3 |
+| Stories                                                    | 42:58   |       |       | 100.0 |
+| Active                                                     |         | 42:58 |       | 100.0 |
+| Edit release notes for previous sprint                     |         |       |  2:41 |   6.2 |
 | Create a video demo for the previous sprint's features     |         |       |  2:11 |   5.1 |
 | Sprint and product backlog grooming                        |         |       |  1:01 |   2.4 |
 | Defining profiles directly on a target model does not work |         |       |  0:30 |   1.2 |
 | Inner modules need to be qualified                         |         |       |  0:22 |   0.9 |
-| Create namespaces for model elements                       |         |       |  8:59 |  21.0 |
+| Create namespaces for model elements                       |         |       |  8:59 |  20.9 |
 | Leaves in internal modules are not captured correctly      |         |       |  1:33 |   3.6 |
-| Try to add relational tracing support                      |         |       |  2:51 |   6.7 |
+| Try to add relational tracing support                      |         |       |  2:51 |   6.6 |
 | Linux and OSX binaries are not stripped                    |         |       |  1:23 |   3.2 |
 | Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  16.8 |
-| Replace JSON based feature templates with generated code   |         |       | 14:06 |  32.9 |
+| Replace JSON based feature templates with generated code   |         |       | 14:14 |  33.1 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -404,6 +404,7 @@ Notes:
 
 *** STARTED Replace JSON based feature templates with generated code  :story:
     :LOGBOOK:
+    CLOCK: [2019-05-12 Sun 18:59]--[2019-05-12 Sun 19:07] =>  0:08
     CLOCK: [2019-05-12 Sun 18:50]--[2019-05-12 Sun 18:58] =>  0:08
     CLOCK: [2019-05-12 Sun 18:38]--[2019-05-12 Sun 18:49] =>  0:11
     CLOCK: [2019-05-12 Sun 18:30]--[2019-05-12 Sun 18:37] =>  0:07
